--- a/manuscript.tex
+++ b/manuscript.tex
@@ -1,1 +1,1 @@
-\documentclass[11pt,a4paper,twocolumn]{jarticle}\usepackage{graphicx}\usepackage{latexsym}\usepackage[fleqn]{amsmath}\usepackage[psamsfonts]{amssymb}\setlength{\textheight}{\paperheight}   % 紙面縦幅を本文領域にする（BOTTOM=-TOP）\setlength{\topmargin}{-1.0cm}       % 上の余白を30mm（=1inch+4.6mm）に\addtolength{\topmargin}{-\headheight}  % \addtolength{\topmargin}{-\headsep}     % ヘッダの分だけ本文領域を移動させる\addtolength{\textheight}{-60truemm}    % 下の余白も30mm（BOTTOM=-TOPだから+TOP+30mm）\setlength{\textwidth}{\paperwidth}     % 紙面横幅を本文領域にする（RIGHT=-LEFT）\setlength{\oddsidemargin}{-0.4truemm}  % 左の余白を25mm(=1inch-0.4mm)に\setlength{\evensidemargin}{-0.4truemm} % \addtolength{\textwidth}{-50truemm}     % 右の余白も25mm（RIGHT=-LEFT）\title{Weekly Report}\author{Osamu Sugiyama}\begin{document}\maketitle\input{contents}\end{document}
+\documentclass[11pt,a4paper,twocolumn]{jarticle}\usepackage{graphicx}\usepackage{latexsym}\usepackage[fleqn]{amsmath}\usepackage[psamsfonts]{amssymb}\setlength{\textheight}{\paperheight}   % 紙面縦幅を本文領域にする（BOTTOM=-TOP）\setlength{\topmargin}{-1.0cm}       % 上の余白を30mm（=1inch+4.6mm）に\addtolength{\topmargin}{-\headheight}  % \addtolength{\topmargin}{-\headsep}     % ヘッダの分だけ本文領域を移動させる\addtolength{\textheight}{-60truemm}    % 下の余白も30mm（BOTTOM=-TOPだから+TOP+30mm）\setlength{\textwidth}{\paperwidth}     % 紙面横幅を本文領域にする（RIGHT=-LEFT）\setlength{\oddsidemargin}{-0.4truemm}  % 左の余白を25mm(=1inch-0.4mm)に\setlength{\evensidemargin}{-0.4truemm} % \addtolength{\textwidth}{-50truemm}     % 右の余白も25mm（RIGHT=-LEFT）\title{Weekly Report}\author{Taro Yamada}\begin{document}\maketitle\input{contents}\end{document}
