support for utf8

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -1,1 +1,1 @@
-\documentclass[11pt,a4paper,twocolumn]{jarticle}\usepackage{graphicx}\usepackage{latexsym}\usepackage[fleqn]{amsmath}\usepackage[psamsfonts]{amssymb}\setlength{\textheight}{\paperheight}   % †–Êc•‚ğ–{•¶—Ìˆæ‚É‚·‚éiBOTTOM=-TOPj\setlength{\topmargin}{-1.0cm}       % ã‚Ì—]”’‚ğ30mmi=1inch+4.6mmj‚É\addtolength{\topmargin}{-\headheight}  % \addtolength{\topmargin}{-\headsep}     % ƒwƒbƒ_‚Ì•ª‚¾‚¯–{•¶—Ìˆæ‚ğˆÚ“®‚³‚¹‚é\addtolength{\textheight}{-60truemm}    % ‰º‚Ì—]”’‚à30mmiBOTTOM=-TOP‚¾‚©‚ç+TOP+30mmj\setlength{\textwidth}{\paperwidth}     % †–Ê‰¡•‚ğ–{•¶—Ìˆæ‚É‚·‚éiRIGHT=-LEFTj\setlength{\oddsidemargin}{-0.4truemm}  % ¶‚Ì—]”’‚ğ25mm(=1inch-0.4mm)‚É\setlength{\evensidemargin}{-0.4truemm} % \addtolength{\textwidth}{-50truemm}     % ‰E‚Ì—]”’‚à25mmiRIGHT=-LEFTj\title{Weekly Report}\author{Taro Yamada}\begin{document}\maketitle\input{contents}\end{document}
+\documentclass[11pt,a4paper,twocolumn]{jarticle}\usepackage{graphicx}\usepackage{latexsym}\usepackage[fleqn]{amsmath}\usepackage[psamsfonts]{amssymb}\setlength{\textheight}{\paperheight}   % ç´™é¢ç¸¦å¹…ã‚’æœ¬æ–‡é ˜åŸŸã«ã™ã‚‹ï¼ˆBOTTOM=-TOPï¼‰\setlength{\topmargin}{-1.0cm}       % ä¸Šã®ä½™ç™½ã‚’30mmï¼ˆ=1inch+4.6mmï¼‰ã«\addtolength{\topmargin}{-\headheight}  % \addtolength{\topmargin}{-\headsep}     % ãƒ˜ãƒƒãƒ€ã®åˆ†ã ã‘æœ¬æ–‡é ˜åŸŸã‚’ç§»å‹•ã•ã›ã‚‹\addtolength{\textheight}{-60truemm}    % ä¸‹ã®ä½™ç™½ã‚‚30mmï¼ˆBOTTOM=-TOPã ã‹ã‚‰+TOP+30mmï¼‰\setlength{\textwidth}{\paperwidth}     % ç´™é¢æ¨ªå¹…ã‚’æœ¬æ–‡é ˜åŸŸã«ã™ã‚‹ï¼ˆRIGHT=-LEFTï¼‰\setlength{\oddsidemargin}{-0.4truemm}  % å·¦ã®ä½™ç™½ã‚’25mm(=1inch-0.4mm)ã«\setlength{\evensidemargin}{-0.4truemm} % \addtolength{\textwidth}{-50truemm}     % å³ã®ä½™ç™½ã‚‚25mmï¼ˆRIGHT=-LEFTï¼‰\title{Weekly Report}\author{Taro Yamada}\begin{document}\maketitle\input{contents}\end{document}
